# oss-llm-runner

./: .gitignore  README.md  pyproject.toml
docs/: 00_overview.md  01_basics.md  01_hfcore.md  02_hfcore.md  03_inferencing.md  04_tool_calling.md  05_deployment.md
eval_results/: generations_20251226_231954.csv  metrics_20251226_231954.csv
inference_results/: inference_20251226_233551.csv  inference_20251226_235130.csv
src/basics/: 00_pandas.py  01_numpy.py  02_math.py  03_attention_math.py  04_attention_impl.py  05_attention_positional_encoding.py  06_mha.py  07_conclusion.py
src/hfcore/: 00_tinygpt.py  01_transformers.py  02_peft_lora.py  03_dataset_plus_finetune_full.py  04_dataset_plus_finetune_lora.py  05_finetuned_model_inference.py  06_evals.py
src/inferencing_and_advanced/: 00_base.py  01_peft_to_mlx.py  02_mlx_lora.py  03_server.py  04_tool_calling_basic.py  05_tool_calling_advanced.py  07_vllm_cuda_plus_tools.py  08_deepseek_example.py  09_mistral_example.py  10_diffuser_image.py  11_diffuser_image_to_image.py  12_ocr.py
