[project]
name = "llm-deeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
